everything works chat ai with gemini-1.5-flash

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "next": "15.1.7",
